--- a/InterManage.UI.Desktop/App.xaml
+++ b/InterManage.UI.Desktop/App.xaml
@@ -18,6 +18,9 @@
                 <!-- Themes and Accents -->
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/Teal.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/BaseDark.xaml" />
+                
+                <!-- Icons -->
+                <ResourceDictionary Source="/Resources/Icons.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
