--- a/InterManage.UI.Desktop/MainWindow.xaml
+++ b/InterManage.UI.Desktop/MainWindow.xaml
@@ -19,6 +19,7 @@
                             <DataGridTextColumn Header="Last Name" Binding="{Binding LastName}"/>
                         </DataGrid.Columns>
                     </DataGrid>
+                    <Button x:Name="btn_AddEmployee" Content="Add Employee" Click="btn_AddEmployee_Click" HorizontalAlignment="Left" Margin="682,485,0,0" VerticalAlignment="Top" Width="90"/>
                     <controls:Flyout Name="fo_EmployeeInfo" Header="Employe Info" Position="Right" Width="359" d:IsHidden="True">
                         <Grid>
                             <Button x:Name="btn_DeleteEmployee" Content="Delete Employee" Margin="242,-42,10,0" VerticalAlignment="Top" Background="#FFA62626" Click="btn_DeleteEmployee_Click" />
@@ -30,6 +31,7 @@
                             <Button x:Name="btn_InfoCancel" Content="Cancel" Margin="274,410,10,0" VerticalAlignment="Top" Click="btn_InfoCancel_Click"/>
                         </Grid>
                     </controls:Flyout>
+
                 </Grid>
             </TabItem>
             <TabItem Header="Schedule">
