Got it working... Be gentle. Everything but the Shfts are working...

--- a/InterManage/View/MainWindow.xaml
+++ b/InterManage/View/MainWindow.xaml
@@ -9,7 +9,7 @@
         Title="InterManage" Height="600" Width="800">
     <TabControl>
         <TabItem Header="Employees">
-            <employee:EmployeeDataGrid />
+            <employee:EmployeeTabControl />
         </TabItem>
     </TabControl>
 </controls:MetroWindow>
