--- a/InterManage/View/Employee/EmployeeDataGrid.xaml
+++ b/InterManage/View/Employee/EmployeeDataGrid.xaml
@@ -3,13 +3,13 @@
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-      xmlns:viewModel="clr-namespace:InterManage.ViewModel"
+      xmlns:employee="clr-namespace:InterManage.ViewModel.Employee"
       mc:Ignorable="d" 
       d:DesignHeight="300"
       d:DesignWidth="300">
 
     <UserControl.DataContext>
-        <viewModel:EmployeeViewModel />
+        <employee:ManageEmployeesViewModel />
     </UserControl.DataContext>
 
     <Grid>
@@ -35,13 +35,13 @@
                 <ColumnDefinition/>
                 <ColumnDefinition/>
             </Grid.ColumnDefinitions>
-            <TextBlock Text="First Name" Grid.Row="1" Grid.Column="0"/>
-            <TextBlock Text="Last Name" Grid.Row="2" Grid.Column="0"/>
+            <TextBlock Text="First Name" Grid.Row="0" Grid.Column="0"/>
+            <TextBlock Text="Last Name" Grid.Row="1" Grid.Column="0"/>
             <!--<TextBox Text="{Binding FirstName, BindingGroupName=Group1, UpdateSourceTrigger=Explicit}" Grid.Column="1" Grid.Row="0"/>-->
             <!--<TextBox Text="{Binding LastName, BindingGroupName=Group1, UpdateSourceTrigger=Explicit}" Grid.Column="1" Grid.Row="1"/>-->
-            <Label Content="{Binding FocusedEmployee.Error}" Grid.Row="0" Grid.Column="0" />
-            <TextBox Text="{Binding FocusedEmployee.FirstName, Mode=TwoWay}" Grid.Column="1" Grid.Row="1"/>
-            <TextBox Text="{Binding FocusedEmployee.LastName, Mode=TwoWay}" Grid.Column="1" Grid.Row="2"/>
+            <!--<Label Content="{Binding FocusedEmployee.Error}" Grid.Row="0" Grid.Column="0" />-->
+            <TextBox Text="{Binding FocusedEmployee.FirstName, Mode=TwoWay}" Grid.Column="1" Grid.Row="0"/>
+            <TextBox Text="{Binding FocusedEmployee.LastName, Mode=TwoWay}" Grid.Column="1" Grid.Row="1"/>
             <Button Grid.Column="0" Grid.Row="9" Foreground="White" Background="DarkRed" Content="Delete" Command="{Binding RemoveEmployeeCommand}" Margin="4,0"/>
             <Button Grid.Column="1" Grid.Row="9" Foreground="White" Background="Green" Content="Save" Command="{Binding AddEmployeeCommand}" Margin="4,0"/>
             
