Working on redoing the sceduel vm because it was a mess

--- a/InterManage/View/Employee/EmployeeSchedules.xaml
+++ b/InterManage/View/Employee/EmployeeSchedules.xaml
@@ -14,7 +14,7 @@
         <employeeViewModels:EmployeeSchedulesViewModel />
     </UserControl.DataContext>
     <Grid>
-        <Grid.ColumnDefinitions>
+        <!--<Grid.ColumnDefinitions>
             <ColumnDefinition />
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
@@ -63,6 +63,55 @@
                     <DataGridTextColumn Header="End" Binding="{Binding End}"/>
                 </DataGrid.Columns>
             </DataGrid>
+        </Grid>-->
+        
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition />
+            <ColumnDefinition Width="*" />
+        </Grid.ColumnDefinitions>
+        <Grid Column="0">
+            <Grid.RowDefinitions>
+                <RowDefinition />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+            <Grid Row="0">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition />
+                    <ColumnDefinition />
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                </Grid.RowDefinitions>
+                
+                <Label Content="Assigned Employee" Grid.Column="0" Grid.Row="0"/>
+                <ComboBox ItemsSource="{Binding Employees}" SelectedItem="{Binding FocusedShift.AssignedEmployee, Mode=TwoWay}" Grid.Column="1" Grid.Row="0" />
+
+                <Label Content="Start Time" Grid.Row="1" Grid.Column="0" />
+                <controls:DateTimePicker Grid.Row="1" Grid.Column="1" SelectedDate="{Binding FocusedShift.StartDay, Mode=TwoWay}" SelectedTime="{Binding FocusedShift.StartTime, Mode=TwoWay}" />
+
+                <Label Content="End Time" Grid.Row="2" Grid.Column="0" />
+                <controls:DateTimePicker Grid.Row="2" Grid.Column="1" SelectedDate="{Binding FocusedShift.EndDay, Mode=TwoWay}" SelectedTime="{Binding FocusedShift.EndTime, Mode=TwoWay}" />
+                <Button Grid.Column="0" Grid.Row="9" Foreground="White" Background="DarkRed" Content="Delete" Command="{Binding RemoveShiftCommand}" Margin="4,0"/>
+                <Button Grid.Column="1" Grid.Row="9" Foreground="White" Background="Green" Content="Save" Command="{Binding SaveShiftCommand}" Margin="4,0"/>
+            </Grid>
+            <DataGrid ItemsSource="{Binding ShiftsOnSelectedDate}" Grid.Row="2" IsReadOnly="True" AutoGenerateColumns="False">
+                <DataGrid.Columns>
+                    <DataGridTextColumn Header="Employee" Binding="{Binding AssignedEmployee.FullName}"/>
+                    <DataGridTextColumn Header="Start" Binding="{Binding Start}"/>
+                    <DataGridTextColumn Header="End" Binding="{Binding End}"/>
+                </DataGrid.Columns>
+            </DataGrid>
         </Grid>
+
+        <Calendar 
+            Grid.Column="1" 
+            SelectionMode="SingleDate" 
+            HorizontalAlignment="Stretch" 
+            VerticalAlignment="Stretch" />
+        
     </Grid>
 </UserControl>
