--- a/InterManage/View/Employee/EmployeeDataGrid.xaml
+++ b/InterManage/View/Employee/EmployeeDataGrid.xaml
@@ -3,13 +3,13 @@
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-      xmlns:employee="clr-namespace:InterManage.ViewModel.Employee"
+      xmlns:employeeViewModels="clr-namespace:InterManage.ViewModel.EmployeeViewModels"
       mc:Ignorable="d" 
       d:DesignHeight="300"
       d:DesignWidth="300">
 
     <UserControl.DataContext>
-        <employee:ManageEmployeesViewModel />
+        <employeeViewModels:ManageEmployeesViewModel />
     </UserControl.DataContext>
 
     <Grid>
