reworking the shifts class

--- a/InterManage/View/Employee/EmployeeSchedules.xaml
+++ b/InterManage/View/Employee/EmployeeSchedules.xaml
@@ -7,6 +7,7 @@
              xmlns:employee="clr-namespace:InterManage.ViewModel.EmployeeViewModels"
              xmlns:controls="http://metro.mahapps.com/winfx/xaml/controls"
              xmlns:employeeViewModels="clr-namespace:InterManage.ViewModel.EmployeeViewModels"
+             xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
              mc:Ignorable="d"
              d:DesignHeight="300" d:DesignWidth="300">
 
@@ -72,12 +73,11 @@
         <Grid Column="0">
             <Grid.RowDefinitions>
                 <RowDefinition />
-                <RowDefinition Height="Auto" />
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
             <Grid Row="0">
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition />
+                    <ColumnDefinition Width="Auto" />
                     <ColumnDefinition />
                 </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
@@ -86,19 +86,25 @@
                     <RowDefinition Height="Auto" />
                     <RowDefinition Height="Auto" />
                 </Grid.RowDefinitions>
-                
+
                 <Label Content="Assigned Employee" Grid.Column="0" Grid.Row="0"/>
-                <ComboBox ItemsSource="{Binding Employees}" SelectedItem="{Binding FocusedShift.AssignedEmployee, Mode=TwoWay}" Grid.Column="1" Grid.Row="0" />
+                <ComboBox ItemsSource="{Binding Employees}" SelectedItem="{Binding FocusedShift.AssignedEmployee, Mode=TwoWay}" Grid.Column="1" Grid.Row="0">
+                    <i:Interaction.Triggers>
+                        <i:EventTrigger EventName="DropDownOpened">
+                            <i:InvokeCommandAction Command="{Binding RequeryEmployees}" />
+                        </i:EventTrigger>
+                    </i:Interaction.Triggers>
+                </ComboBox>
 
                 <Label Content="Start Time" Grid.Row="1" Grid.Column="0" />
-                <controls:DateTimePicker Grid.Row="1" Grid.Column="1" SelectedDate="{Binding FocusedShift.StartDay, Mode=TwoWay}" SelectedTime="{Binding FocusedShift.StartTime, Mode=TwoWay}" />
+                <controls:DateTimePicker Grid.Row="1" Grid.Column="1" SelectedDate="{Binding FocusedShiftStart.Date, Mode=TwoWay}" SelectedTime="{Binding FocusedShiftStart.Time, Mode=TwoWay}" />
 
                 <Label Content="End Time" Grid.Row="2" Grid.Column="0" />
-                <controls:DateTimePicker Grid.Row="2" Grid.Column="1" SelectedDate="{Binding FocusedShift.EndDay, Mode=TwoWay}" SelectedTime="{Binding FocusedShift.EndTime, Mode=TwoWay}" />
-                <Button Grid.Column="0" Grid.Row="9" Foreground="White" Background="DarkRed" Content="Delete" Command="{Binding RemoveShiftCommand}" Margin="4,0"/>
-                <Button Grid.Column="1" Grid.Row="9" Foreground="White" Background="Green" Content="Save" Command="{Binding SaveShiftCommand}" Margin="4,0"/>
+                <controls:DateTimePicker Grid.Row="2" Grid.Column="1" SelectedDate="{Binding FocusedShiftEnd.Date, Mode=TwoWay}" SelectedTime="{Binding FocusedShiftEnd.Time, Mode=TwoWay}" />
+                <Button Grid.Column="0" Grid.Row="3" Foreground="White" Background="DarkRed" Content="Delete" Command="{Binding RemoveShiftCommand}" Margin="4,0"/>
+                <Button Grid.Column="1" Grid.Row="3" Foreground="White" Background="Green" Content="Save" Command="{Binding SaveShiftCommand}" Margin="4,0"/>
             </Grid>
-            <DataGrid ItemsSource="{Binding ShiftsOnSelectedDate}" Grid.Row="2" IsReadOnly="True" AutoGenerateColumns="False">
+            <DataGrid ItemsSource="{Binding ShiftsOnSelectedDate}" Grid.Row="1" IsReadOnly="True" AutoGenerateColumns="False">
                 <DataGrid.Columns>
                     <DataGridTextColumn Header="Employee" Binding="{Binding AssignedEmployee.FullName}"/>
                     <DataGridTextColumn Header="Start" Binding="{Binding Start}"/>
@@ -107,11 +113,13 @@
             </DataGrid>
         </Grid>
 
-        <Calendar 
-            Grid.Column="1" 
+        <Viewbox Grid.Column="1">
+            <Calendar
+            SelectedDate="{Binding SelectedDate, Mode=TwoWay}"
             SelectionMode="SingleDate" 
             HorizontalAlignment="Stretch" 
             VerticalAlignment="Stretch" />
+        </Viewbox>
         
     </Grid>
 </UserControl>
