--- a/InterManage/View/Customer/CheckInCustomer.xaml
+++ b/InterManage/View/Customer/CheckInCustomer.xaml
@@ -4,8 +4,15 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:InterManage.View.Customer"
+             xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+             xmlns:employeeViewModels="clr-namespace:InterManage.ViewModel.EmployeeViewModels"
+             xmlns:customerViewModel="clr-namespace:InterManage.ViewModel.CustomerViewModel"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
+
+    <UserControl.DataContext>
+        <customerViewModel:CustomerCheckInViewModel />
+    </UserControl.DataContext>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
@@ -24,8 +31,13 @@
             </Grid.RowDefinitions>
             <Label Content="Employee" Grid.Column="0" Grid.Row="0"/>
             <Label Content="Customer Phone Number" Grid.Column="0" Grid.Row="1"/>
-            
-            <ComboBox Grid.Column="1" Grid.Row="0" />
+            <ComboBox ItemsSource="{Binding Employees}" SelectedItem="{Binding FocusedCustomer.Employee, Mode=TwoWay}" Grid.Column="1" Grid.Row="0">
+                <i:Interaction.Triggers>
+                    <i:EventTrigger EventName="DropDownOpened">
+                        <i:InvokeCommandAction Command="{Binding RequeryEmployees}" />
+                    </i:EventTrigger>
+                </i:Interaction.Triggers>
+            </ComboBox>
             <TextBox Grid.Column="1" Grid.Row="1" />
             <Button Foreground="White" Background="Green" Content="Check In" Grid.Column="1" Grid.Row="2"/>
             
